# rudis

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: docs.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh  generate-release-notes.sh
.gitlab/scripts/: check-release-exists-gitlab.sh  create-gitlab-release.sh  generate-release-notes-gitlab.sh  get-next-version-gitlab.sh
docs/: README.md  docfx.json  gitlab-deployment.md  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/rudis_cli/: __init__.py  __main__.py
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
